# billbaord

./: CMakeLists.txt  README.md  billboard_cloud.cpp  learn.cpp  main.cpp  nigga.cpp  test_shape.txt  vcpkg-configuration.json  vcpkg.json
include/glad/: glad.h
src/: glad.c
tinygltf-release/: CMakeLists.txt
tinygltf-release/.github/workflows/: ci.yml
